[package]
name = "tower_controller_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Ui library
fltk = {version = "1.3.20", features = ["fltk-bundled"]}
fltk-grid = "0.1.4"

# Database
# firestore = "0.22.0"
# firestore = { git = "https://github.com/abdolence/firestore-rs", branch = "master" }
# firestore = { git = "https://github.com/jokil123/firestore-rs", branch = "master" }
firestore = { path = "../../firestore-rs" }

# Utilities
clone_all = "0.1.1"
thiserror = "1.0.38"
dotenv = "0.15.0"

# Data Serialization
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

# Async runtime
tokio = { version = "1.24.1", features = ["full"] }

chrono = "0.4.23"

async-trait = "0.1.61"

# example
rvstruct = "0.3.2"
hex = "0.4.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

futures = "0.3.25"

tokio-stream = "0.1.11"	

rand = "0.8.5"

prost-types = "0.11.6"

gcloud-sdk = "0.19.15"